--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <!-- Material Icons Link -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Fontawsome Icons Link -->
-    <script src="https://kit.fontawesome.com/248b31097f.js" crossorigin="anonymous"></script>
-    <!-- External CSS Link -->
     <link rel="stylesheet" href="css/style.css">
     <title>WhatsApp Clone</title>
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper d-flex flex-row">
         <div class="sidebar">
+
             <!-- Header Section -->
             <header class="d-flex justify-content-between align-items-center">
                 <div class="profile">
@@ -33,36 +31,53 @@
                 </div>
             </header>
 
-            <!-- Search Field -->
-            <div class="search_field d-flex align-items-center p-1 m-2">
-                <span style="font-size: 20px;" class="material-icons mr-4 ml-2">search</span>
-                <input type="text" placeholder="Search or start new chat">
+            <!-- Search Secion -->
+            <div style="height: 8vh;" class="search_field d-flex justify-content-center align-items-center">
+                <div class="container d-flex justify-content-center align-items-center">
+                    <span style="font-size: 20px; font-weight: 600;" class="material-icons mr-4">search</span>
+                    <input type="text" placeholder="Search or start new chat">
+                </div>
             </div>
 
-            <!-- Contacts -->
+            <!-- Contacts Section -->
             <div class="contacts w-100">
-                <ul>
-                    <li>
-                        <div class="user_profile ml-2">
-                            <img src="images/user1.jpg" alt="" width="49" height="49">
+
+                <div class="contact_box d-flex align-items-center w-100">
+                    <div class="user_profile mr-3">
+                        <img src="images/user1.jpg" alt="User Profile" width="49" height="49">
+                    </div>
+                    <div class="user_info w-100">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="contact_name">Jawad Shah</div>
+                            <div class="receive_time">7:00 PM</div>
                         </div>
-                        <div class="contact_data pr-4">
-                            <div class="w-100 d-flex justify-content-between align-items-center">
-                                <div class="contact_name">John Smith. UMT</div>
-                                <span class="time">7:00 PM</span>
-                            </div>
-                            <div class="d-flex justify-content-between">
-                                <div class="message_part">Lorem ipsum dolor sit amet</div>
-                                <span class="material-icons menu_icon">keyboard_arrow_down</span>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="message_part">Lorem ipsum dolor sit amet</div>
+                            <div class="dropdown">
+                                <span class="material-icons menu_icon" id="contactDropdownMenuButton" data-toggle="dropdown"
+                                    aria-expanded="false">keyboard_arrow_down</span>
+                                <div class="dropdown-menu shadow" aria-labelledby="contactDropdownMenuButton">
+                                    <a class="dropdown-item" href="#">Archieve chat</a>
+                                    <a class="dropdown-item" href="#">Mute cotification</a>
+                                    <a class="dropdown-item" href="#">Delete chat</a>
+                                    <a class="dropdown-item" href="#">Pin chat</a>
+                                    <a class="dropdown-item" href="#">Mark as unread</a>
+                                </div>
                             </div>
                         </div>
-                    </li>
-                </ul>
+                    </div>
+                </div>
+
             </div>
 
         </div>
-        <div class="main"></div>
+        <div class="main">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus et quo, provident omnis
+            nulla soluta quis ab sapiente nostrum. Illo accusantium eos earum sapiente quam odio laborum, sunt tenetur
+            rerum.
+
+        </div>
     </div>
+
 
 
     <!-- Bootstrap Scripts -->
